	maps is done using the sun_entry2amd() function.  This function is
	called for each entry line that is read only when Sun parsing is
	enabled.  For each entry line that is passed to the function a
	copy of the Amd equivalent is returned.

	* amd/sun_map.h: new header file for Sun style map support

	* amd/sun_map.c: new source file for Sun style map support, clean
	up comments.

	* amd/sun_map_parse.y: new yacc file for parsing Sun style maps,
	fix copyright notice, put filename below license.

	* amd/sun_map_tok.l: new lex file for parsing Sun style maps, fix
	copyright notice, put filename below license.

2005-08-06  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/info_file.c (file_search, file_reload): pass mnt_map to
	file_search_or_reload.
	(file_search_or_reload): ensure that mnt_map is never NULL.

	* amd/info_nis.c (nis_search): call sun_entry2amd() if
	sun_map_syntax=yes.

	* amd/info_ldap.c (amu_ldap_search): call sun_entry2amd() if
	sun_map_syntax=yes.

	* amd/info_hesiod.c (hesiod_search): call sun_entry2amd() if
	sun_map_syntax=yes.

	* amd/info_ndbm.c (ndbm_search): pass mnt_map to search_ndbm.
	(search_ndbm): call sun_entry2amd() if sun_map_syntax=yes.

	* amd/info_nisplus.c (nisplus_search): call sun_entry2amd() if
	sun_map_syntax=yes.

	* amd/info_exec.c (exec_search): pass mnt_map to
	exec_parse_qanswer.
	(exec_parse_qanswer): call sun_entry2amd() if sun_map_syntax=yes.

	* doc/am-utils.texi (sun_map_syntax Parameter): document new
	common parameter.

	* scripts/amd.conf.5: selectors_in_defaults is a common parameter,
	not just [global].  Use consistent capitalization of Amd/Amq.
	Document new sun_map_syntax parameter.

	* scripts/amd.conf-sample: properly list all of the parameters
	which are common to both the [global] and the per-map sections.
	(sun_map_syntax): example of new parameter.

	* doc/am-utils.texi (Common Parameters): selectors_in_defaults is
	a common parameter, not just [global].
